frontend/test/should_pass/edge_001.grg
rule r {
	x:Node -- y:Node;

	modify {
	}
}

